gccida/g0/flow_loop_dump
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/flow_loop_dump/src/cfgloop.c:577:7: error: expected expression
if (  struct loop && loop->header ) 
      ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/flow_loop_dump/src/cfgloop.c:584:22: error: use of undeclared identifier 'unk_74FBAF'
v4 = ( const char *)&unk_74FBAF; 
                     ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/flow_loop_dump/src/cfgloop.c:588:22: error: use of undeclared identifier 'unk_74FBAF'
v5 = ( const char *)&unk_74FBAF; 
                     ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/flow_loop_dump/src/cfgloop.c:603:22: error: use of undeclared identifier 'unk_74FBAF'
v6 = ( const char *)&unk_74FBAF; 
                     ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/flow_loop_dump/src/cfgloop.c:607:22: error: use of undeclared identifier 'unk_74FBAF'
v7 = ( const char *)&unk_74FBAF; 
                     ^
5 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/flow_loop_dump/src/obj/cfgloop.o] Error 1
